# gw-ocaml

./: .gitignore  .ocamlinit  dune-project  gw_partial.opam  unbalanced_gw.opam
analyses/: dune  gw_original.ml  partial_matching.ml  sample.ml
futhark/: Cli.ml  Makefile  dune  scaling_unbalanced.fut  scaling_unbalanced.json  scaling_unbalanced.ml  utilities.ml
futhark/cuda/: dune  scaling_unbalanced_cuda.h  scaling_unbalanced_cuda.json  scaling_unbalanced_cuda.ml  scaling_unbalanced_cuda.mli
futhark/multicore/: dune  scaling_unbalanced_multicore.h  scaling_unbalanced_multicore.json  scaling_unbalanced_multicore.ml  scaling_unbalanced_multicore.mli
futhark/opencl/: dune  scaling_unbalanced_opencl.h  scaling_unbalanced_opencl.json  scaling_unbalanced_opencl.mli
futhark/single_core/: dune  scaling_unbalanced_single_core.c  scaling_unbalanced_single_core.h  scaling_unbalanced_single_core.json  scaling_unbalanced_single_core.ml  scaling_unbalanced_single_core.mli
lib/: dune  gw.ml  helper.ml  ot.ml  owl_helper.ml  owl_helper.mli  test.ml
lib/swc/: batch.ml  dune  parse.ml  parse.mli  prune.ml  sample.ml  sample_cli.ml  swc_core.ml  swc_core.mli  testfile.ml  tree.ml  utility.ml  utility2.ml
test/: binary_search.ml  dune  sample.ml
test/gw/: dune  gw.ml
